contains- full syn boost

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -443,8 +443,8 @@ nci:
                    neoplastic_status: '"Neoplastic_Status^10","Neoplastic_Status.exact^10","Neoplastic_Status.ngram^10",',
                     P207: '"UMLS_CUI^10","UMLS_CUI.exact^10","UMLS_CUI.ngram^10",',
                     umls_cui: '"UMLS_CUI^10","UMLS_CUI.exact^10","UMLS_CUI.ngram^10",',
-                    P208: '"NCI_META_CUI^10","NCI_META_CUI.exact^10",,"NCI_META_CUI.ngram^10",',
-                    nci_meta_cui: '"NCI_META_CUI^10","NCI_META_CUI.exact^10",,"NCI_META_CUI.ngram^10",',
+                    P208: '"NCI_META_CUI^10","NCI_META_CUI.exact^10","NCI_META_CUI.ngram^10",',
+                    nci_meta_cui: '"NCI_META_CUI^10","NCI_META_CUI.exact^10","NCI_META_CUI.ngram^10",',
                     P210: '"CAS_Registry^10","CAS_Registry.exact^10","CAS_Registry.ngram^10",',
                     cas_registry: '"CAS_Registry^10","CAS_Registry.exact^10","CAS_Registry.ngram^10",',
                     P215: '"KEGG_ID^10","KEGG_ID.exact^10","KEGG_ID.ngram^10",',
@@ -661,9 +661,9 @@ nci:
               "alt_definitions_plain.exact^20",
               "alt_definitions_plain.ngram^10",
               "Semantic_Type^10",       
-              "synonyms_plain^50",
-              "synonyms_plain.exact^50",
-              "synonyms_plain.ngram^30",              
+              "synonyms_plain^100",
+              "synonyms_plain.exact^100",
+              "synonyms_plain.ngram^50",              
               "Superconcept.label^20",
               "Superconcept.label.exact^20",
               "Superconcept.label.ngram^10",
