--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -9,10 +9,6 @@ spring:
         name: nci-evs-api
     profiles:
       include: thesaurus
-
-
-
-
     #
     # JSON Formatting Properties
     #
@@ -20,67 +16,57 @@ spring:
         serialization:
             INDENT_OUTPUT: true
 
-
 management:
   endpoints:
     web:
       exposure:
         include: heapdump,liquibase,loggers,prometheus,threaddump,info,metrics,health
 
-
-
-
 info:
     app:
         name: NCI EVS API
         version: 1.0.0.RELEASE
-
-
-
 
 #
 # Logging Properties
 #
 logging:
     level:
-        org.springframework: ${LOGGING_LEVEL_ORG_SPRINGFRAMEWORK:WARN}
-        gov.nih.nci.evs.api: ${LOGGING_LEVEL_GOV_NIH_NCI_EVS_API:INFO}
-
-
+        org.springframework: WARN
+        gov.nih.nci.evs.api: INFO
 
 #
 # Server Properties
 #
 server:
-    port: ${EVS_SERVER_PORT:8080}
+    port: 8080
     servlet:
        context-path: /
        session:
         persistent: false
 
-
 nci:
   evs:
     application:
-      contextPath: ${NCI_EVS_API_PATH:/api/v1}
-      generatedFilePath: ${NCI_EVS_API_GENERATED_FILE_PATH:${user.home}/apps/evsrestapi/data/}
-      forceFileGeneration: ${NCI_EVS_API_FORCE_FILE_GENERATION:true}
-      metricLogDirectory:  ${NCI_EVS_API_METRIC_LOG_PATH:${user.home}/apps/evsrestapi/logs/}
+      contextPath: /api/v1
+      generatedFilePath: ${user.home}/apps/evsrestapi/data/
+      forceFileGeneration: true
+      metricLogDirectory: ${user.home}/apps/evsrestapi/logs/
     stardog:
-      monthlyQueryUrl: ${STARDOG_MONTHLY_QUERY_URL:http://localhost:5820/NCIT2/query}
-      monthlyGraphName: ${STARDOG_MONTHLY_GRAPH_NAME:http://NCI_T}
-      weeklyQueryUrl: ${STARDOG_WEEKLY_QUERY_URL:http://localhost:5820/NCIT2/query}
-      weeklyGraphName: ${STARDOG_WEEKLY_GRAPH_NAME:http://NCI_T}
-      username: ${STARDOG_USERNAME:REPLACE_WITH_USERNAME}
-      password: ${STARDOG_PASSWORD:REPLACE_WITH_PASSWORD}
-      readTimeout: ${STARDOG_READ_TIMEOUT:30}
-      connectTimeout: ${STARDOG_CONNECT_TIMEOUT:30}
-      owlfileName: ${STARDOG_OWL_FILENAME:REPLACE_WITH_OWL_FILENAME}
-      populateCacheCron: ${POPULATE_CACHE_CRON:0 0 1 * * *}
-      forcePopulateCache: ${FORCE_POPULATE_CACHE:N}
+      monthlyQueryUrl: http://localhost:5820/NCIT2/query
+      monthlyGraphName: http://NCI_T
+      weeklyQueryUrl: http://localhost:5820/NCIT2/query
+      weeklyGraphName: http://NCI_T
+      username: admin
+      password: admin
+      readTimeout: 30
+      connectTimeout: 30
+      owlfileName: Thesaurus.owl
+      populateCacheCron: 0 0 1 * * *
+      forcePopulateCache: N
     elasticsearch:
       server:
-        url: ${EVS_ELASTIC_SEARCH_SERVER_URL:http://localhost:9200/concept_flat_full_nested_bylabel/concept/_search}
+        url: http://localhost:9200/concept_flat_full_nested_bylabel/concept/_search
       query:
         propertyToQuery: {
                    p108:
@@ -1640,7 +1626,6 @@ nci:
 
 swagger:
    documentation:
-       hostURL:  ${HOST_URL:http://localhost:8082}
+       hostURL:  http://localhost:8080
        searchAPIOperation: Searches for the term or phrase using the Elastic Search mechanism
-
 
