EVSRESTAPI-32: implement /api/v1/metadata/terminologies

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -50,7 +50,7 @@ nci:
     application:
       contextPath: /api/v1
       generatedFilePath: ${user.home}/apps/evsrestapi/data/
-      forceFileGeneration: true
+      forceFileGeneration: false
       metricLogDirectory: ${user.home}/apps/evsrestapi/logs/
     stardog:
       monthlyQueryUrl: http://localhost:5820/NCIT2/query
