--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -66,7 +66,7 @@ nci:
       forcePopulateCache: N
     elasticsearch:
       server:
-        url: http://localhost:9200/concept_flat_full_nested_bylabel/concept/_search
+        url: http://localhost:9200/concept/_search
       query:
         propertyToQuery: {
                    p108:
